# esm

./: .gitignore  pyproject.toml
.github/: build-images.yml
.github/workflows/: build-images.yml
oci/: Containerfile
src/esm/: axial_attention.py  data.py  multihead_attention.py  pretrained.py
src/esm/esmfold/v1/: esmfold.py  misc.py  pretrained.py  tri_self_attn_block.py  trunk.py
src/esm/inverse_folding/: features.py  gvp_encoder.py  gvp_modules.py  transformer_decoder.py  transformer_layer.py  util.py
src/esm/openfold/: config.py
src/esm/openfold/data/: data_transforms.py
src/esm/openfold/model/: primitives.py  structure_module.py  triangular_attention.py  triangular_multiplicative_update.py
src/esm/openfold/np/: protein.py
src/esm/openfold/utils/: all_atom_multimer.py  checkpointing.py  chunk.py  feats.py  loss.py
src/esm/openfold/utils/geometry/: quat_rigid.py  rigid_matrix_vector.py  rotation_matrix.py  vector.py
src/esm/openfold/utils/kernel/: attention_core.py
src/esm/scripts/: extract.py  fold.py  fold_v2.py
src/openfold/: __init__.py
src/openfold/data/: data_transforms.py
src/openfold/model/: primitives.py  structure_module.py  triangular_attention.py  triangular_multiplicative_update.py
src/openfold/np/: protein.py
src/openfold/utils/: all_atom_multimer.py  chunk.py  feats.py  loss.py  rigid.py  tensor.py
src/openfold/utils/geometry/: rotation_matrix.py
tests/: test_inverse_folding.py
